# PlanGPT-VL

./: .gitignore  README.md  REFACTORING.md  pyproject.toml  requirements.txt
LLaMA-Factory/: ft_tuning_vlm_experiment.py  ft_tuning_vlm_simple.py  ft_vl_new.sh  vlm_train.py
LLaMA-Factory/dpo/: dpo.sh  ft.sh  ft_lima.sh  ft_long.sh
docs/: azure_endpoints_example.json
eval/: eval.py
logs/: fix_log.txt
outputs/full_run/: captions.json  filter_results.json  questions.json  responses.json
src/: cpt.py  pipeline.py  question.py  response.py  rlaifv-caption.py  utils.py
src/analysis/: __init__.py  caption_refiner.py  postprocessor.py
src/common/: __init__.py  image_utils.py  inference_utils.py  io_utils.py  text_utils.py
src/core/: __init__.py  config.py  prompts.py
src/data_processing/: __init__.py  cpt_generator.py  question_generator.py  response_generator.py
src/eval/: check.py  eval.py  planbench-subset.json  run_planbench_eval.py
src/filtering/: __init__.py  planning_map_filter.py  resolution_filter.py
src/fliter/: llm_filter_clean.py  rewrite_map.py
src/inference/: README.md  client.py  proxy.py  run_ms_api.py  server.py  start.py  start_vllm.sh  test.py
src/scripts/: __init__.py  filter_images.py  generate_questions.py  generate_responses.py
src/tools/: __init__.py  benchmark_concurrency.py  filtering.py  inference_utils.py  postprocess.py  postprocessor.py  run_pipeline.py  utils.py
train/: README.md  convert.py  dpo_vl.sh  ft_tuning.py  ft_tuning_vlm_simple.py  ft_vl.sh  train_pipline.py
train/configs/: qwen25vl_merge.yaml  (+7 more)
(+27 files in other folders)
