[project]
name = "plangpt-vl"
version = "0.1.0"
description = "PlanGPT-VL: Urban planning VLM data synthesis, training, and evaluation"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "azure-identity>=1.17.0",
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    "aiohttp>=3.9.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
eval = [
    "lmms-eval>=0.7.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]
train = ["llamafactory"]

[tool.uv]
python-preference = "system"

[tool.uv.workspace]
members = ["train"]

[tool.uv.sources]
llamafactory = { workspace = true }
